@@ -5,6 +5,7 @@
  */
 package wikokit.base.wikt.util;
 
+import java.util.List;
 import wikokit.base.wikt.constant.Label;
 
 /** Data structure consists of an array of context labels 
@@ -24,7 +25,14 @@ public class LabelText {
         labels = _labels;
         text = _text;       //text = new StringBuffer();
     }
-
+    
+    private final static Label[] NULL_LABEL_ARRAY = new Label[0];
+    
+    public LabelText(List<Label> _labels, String _text) {
+        labels = (Label[])_labels.toArray(NULL_LABEL_ARRAY);
+        text = _text;
+    }
+    
     /** Gets context labels array. */
     public Label[] getLabels() {
         return labels;
@@ -34,4 +42,31 @@ public class LabelText {
     public String getText() {
         return text;
     }
+    
+    /** @return true if object are equals (the same labels and the same text). */
+    static public boolean equals (LabelText one, LabelText two) {
+    
+        if (null == one && null == two)
+            return true;
+        if (null == one || null == two)
+            return false;
+        
+        if(!one.text.equals(two.text))
+            return false;
+        
+        // compare two arrays of labels
+        for(int i=0; i<one.labels.length; i++) {
+            boolean b_identical = false;
+            
+            for(int j=0; j<two.labels.length; j++) {
+                if(Label.equals( one.labels[i], two.labels[j] )) {
+                    b_identical = true;
+                    break;
+                }
+            }
+            if(!b_identical)
+                return false;
+        }
+        return true;
+    };
 }
